@@ -711,9 +711,5 @@ void psxHwWrite32(u32 add, u32 value) {
 }
 
 int psxHwFreeze(gzFile f, int Mode) {
-	char Unused[4096];
-
-	gzfreezel(Unused);
-
 	return 0;
 }
